...
    }
}

- (void)actionShowList
{
    UIViewController *recordController = [[RecordViewController alloc] init];
    recordController.title = @"Records";
    
    [self.navigationController pushViewController:recordController animated:YES];
}

#pragma mark - Utility

...
#pragma mark - Life Cycle

- (void)viewDidLoad
{
    [super viewDidLoad];
    
    [self setTitle:@"My Route"];
    
    [self initNavigationBar];
    
    [self initMapView];
    
    [self initStatusView];
...
