...
        tableView.deselectRow(at: indexPath as IndexPath, animated: true)
        
        if !routes!.isEmpty {
            
            let route: AMapRouteRecord = routes![indexPath.row]
            let displayController = DisplayViewController(nibName: nil, bundle: nil)
            displayController.title = "Display"
            displayController.route = route
            
            navigationController!.pushViewController(displayController, animated: true)
        }
  
    }
...
